fix width overflow

--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@ body {
 
 	background-color: black;
 	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 canvas{
